...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/deleteTeamCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/colorPrimaryDark"
            android:checked="@{delete == DeleteState.DELETE ? true : false}"/>
        <EditText
            android:id="@+id/team_name_edit_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@={team.name}"
            android:inputType="none"
            android:clickable="false"
            android:cursorVisible="false"
...
